@@ -6,7 +6,7 @@ Apply spectral delays on a sound.
 """
 from pyo import *
 
-s = Server().boot()
+s = Server(duplex=0).boot()
 
 snd = "../snds/ounkmaster.aif"
 chnls = sndinfo(snd)[3]
