@@ -9,7 +9,7 @@ first and RND_LEVEL.
 """
 from pyo import *
 
-s = Server().boot()
+s = Server(duplex=0).boot()
 
 # Length of grains in samples
 SIZE = 8192
