@@ -6,7 +6,7 @@ Simple soundfile player used by 06_separated_threads.py example.
 """
 from pyo import *
 
-s = Server().boot()
+s = Server(duplex=0).boot()
 
 sf = SfPlayer('../snds/snd_1.aif')
 sf2 = sf.mix(2).out()
